--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -3,3 +3,5 @@
     <div><span>id: </span>{{hero.id}}</div>
     <div><label>name: <input [(ngModel)]="hero.name" placeholder="name"/></label></div>
 </div>
+
+<button (click)="goBack()">go back</button>
